优化添加游客 取消除管理员之外角色删除产品功能 增加游客访问信息

--- a/wy_ssm_web/pom.xml
+++ b/wy_ssm_web/pom.xml
@@ -42,7 +42,7 @@
     </dependencies>
 
     <build>
-        <finalName>wy_ssm_web</finalName>
+        <finalName>Travel</finalName>
         <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
             <plugins>
                 
