--- a/wy_ssm_web/src/main/resources/db.properties
+++ b/wy_ssm_web/src/main/resources/db.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/wy_bs?useUnicode=true&characterEncoding=utf8
+jdbc.url=jdbc:mysql://pipiyu.ltd:3306/wy_bs?useUnicode=true&characterEncoding=utf8
 jdbc.username=root
 jdbc.password=159357www
